gipsy-src/src/gipsy/GIPC/Preprocessing/PreprocessorParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. PreprocessorParser.java */
package gipsy.GIPC.Preprocessing;

import gipsy.GIPC.util.*;


/**
 * Preprocessor Parser to chunkanize a GIPSY program into parts.
 *
 * NOTE: Automatically generated by JavaCC. When making changes to this
 * file, please also update PreprocessorParser.jjt accordingly.
 *
 * $Id: PreprocessorParser.java,v 1.20 2005/11/08 23:36:42 aihua_wu Exp $
 *
 * @author Serguei Mokhov, mokhov@cs.concordia.ca
 * @version $Revision: 1.20 $
 * @since 1.0.0
 */
public class PreprocessorParser/*@bgen(jjtree)*/implements PreprocessorParserTreeConstants, PreprocessorParserConstants {/*@bgen(jjtree)*/
  protected JJTPreprocessorParserState jjtree = new JJTPreprocessorParserState();/**
	 * The root of the Preprocessor's AST.
	 */
        protected SimpleNode oPreprocessorASTRoot = null;

        /**
	 * Generic parse method.
	 * @throws ParseException if parse error happened
	 */
        public void parse()
        throws ParseException
        {
                this.oPreprocessorASTRoot = startParse();
        }

        /**
	 * Gets the root of the Preprocessor's AST.
	 * @return the AST root of the preprocessed code segments
	 */
        public SimpleNode getPreprocessorASTRoot()
        {
                return this.oPreprocessorASTRoot;
        }

/*
 * ------
 * SYNTAX
 * ------
 */

/**
 * The parsing begins here.
 * @throws ParseException if there was a syntax error
 */
  final public SimpleNode startParse() throws ParseException {
                                  /*@bgen(jjtree) START */
  SimpleNode jjtn000 = new SimpleNode(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      gipsy();
      jj_consume_token(0);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
                {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

/**
 * The staring producion of the GIPSY program
 * GIPSY ->
 * 	DECLARATIONS CODESEGMENTS
 */
  final public void gipsy() throws ParseException {
    declarations();
    codeSegments();
  }

/**
 * DECLARATIONS ->
 * 	FUNCDECLS DECLARATIONS
 * 	| TYPEDECLS DECLARATIONS
 *  | {}
 */
  final public void declarations() throws ParseException {
    if (jj_2_3(2)) {
      if (jj_2_1(2)) {
        funcDecls();
        declarations();
      } else if (jj_2_2(2)) {
        typeDecls();
        declarations();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      ;
    }
  }

/**
 * FUNCDECLS ->
 * 	"#funcdecl" PROTOTYPES
 */
  final public void funcDecls() throws ParseException {
                               /*@bgen(jjtree) FUNCDECLS */
  SimpleNode jjtn000 = new SimpleNode(JJTFUNCDECLS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(FUNCDECL);
      prototypes();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
 * TYPEDECLS ->
 * 	"#typedecl" TYPES
 */
  final public void typeDecls() throws ParseException {
                               /*@bgen(jjtree) TYPEDECLS */
  SimpleNode jjtn000 = new SimpleNode(JJTTYPEDECLS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_4(2)) {
        jj_consume_token(TYPEDECL);
        types();
      } else if (jj_2_5(2)) {
        jj_consume_token(IPLDECL);
        iplTypes();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void iplTypes() throws ParseException {
                             /*@bgen(jjtree) IPLTYPES */
  SimpleNode jjtn000 = new SimpleNode(JJTIPLTYPES);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_6(2)) {
        iplType();
        iplTypes();
      } else {
        ;
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void iplType() throws ParseException {
                           /*@bgen(jjtree) IPLTYPE */
  SimpleNode jjtn000 = new SimpleNode(JJTIPLTYPE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LANGID);
      codeSegment();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
 * PROTOTYPES ->
 * 	PROTOTYPE ";" PROTOTYPES
 * 	| {}
 */
  final public void prototypes() throws ParseException {
                                 /*@bgen(jjtree) PROTOTYPES */
  SimpleNode jjtn000 = new SimpleNode(JJTPROTOTYPES);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_7(2)) {
        prototype();
        jj_consume_token(SEMICOLON);
        prototypes();
      } else {
        ;
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
 * PROTOTYPE -> TYPE ID "(" TYPELIST ")" EMBED
 */
  final public void prototype() throws ParseException {
 /*@bgen(jjtree) PROTOTYPE */
        SimpleNode jjtn000 = new SimpleNode(JJTPROTOTYPE);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token oReturnType;
        Token oTokenFID;
        Token oImmutable = null;
    try {
      if (jj_2_8(2)) {
        oImmutable = jj_consume_token(IMMUTABLE);
      } else {
        ;
      }
      oReturnType = type();
      oTokenFID = jj_consume_token(ID);
      jj_consume_token(LPAREN);
      typeList();
      jj_consume_token(RPAREN);
      if (jj_2_9(2)) {
        jj_consume_token(COLON);
        embed();
      } else {
        ;
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
                jjtn000.setLexeme(oReturnType.image + ":" + oTokenFID.image);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
 * EMBED -> ( LANGID ":" URL ( ":" ID | {} ) | {} )
 */
  final public void embed() throws ParseException {
 /*@bgen(jjtree) EMBED */
        SimpleNode jjtn000 = new SimpleNode(JJTEMBED);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token oTokenURL;
        Token oTokenLang;
        Token oTokenIDMap = null;
    try {
      oTokenLang = jj_consume_token(LANGID);
      oTokenURL = url();
      if (jj_2_10(2)) {
        jj_consume_token(COLON);
        oTokenIDMap = jj_consume_token(ID);
      } else {
        ;
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
                String strAltName = oTokenIDMap == null ? "": oTokenIDMap.image;
                jjtn000.setLexeme(oTokenURL.image + "|" + oTokenLang.image + "|" + strAltName);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
 * TYPES ->
 * 	  ID        ";" TYPES
 * 	| ID ":" ID ";" TYPES
 * 	| {}
 */
  final public void types() throws ParseException {
                       /*@bgen(jjtree) TYPES */
  SimpleNode jjtn000 = new SimpleNode(JJTTYPES);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_12(2)) {
        jj_consume_token(ID);
        if (jj_2_11(2)) {
          jj_consume_token(COLON);
          jj_consume_token(ID);
        } else {
          ;
        }
        jj_consume_token(SEMICOLON);
        types();
      } else {
        ;
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
 * TYPELIST ->
 * 	TYPE ("," TYPELIST | {})
 * 	| {}
 */
  final public void typeList() throws ParseException {
    if (jj_2_14(2)) {
      type();
      if (jj_2_13(2)) {
        jj_consume_token(COMMA);
        typeList();
      } else {
        ;
      }
    } else {
      ;
    }
  }

/**
 * CODESEGMENT ->
 * 	LANGDATA ( LANGID | EOF ).
 */
  final public void codeSegment() throws ParseException {
 /*@bgen(jjtree) CODESEGMENT */
        SimpleNode jjtn000 = new SimpleNode(JJTCODESEGMENT);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token oToken;
    try {
      oToken = jj_consume_token(LANGDATA);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
                // Make sure we remember what the contents was
                jjtn000.setLexeme(oToken.image);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
 * CODESEGMENTS ->
 * 	CODESEGMENT CODESEGMENTS
 * 	| {}.
 */
  final public void codeSegments() throws ParseException {
    if (jj_2_15(2)) {
      codeSegment();
      codeSegments();
    } else {
      ;
    }
  }

/**
 * URL -> CHARACTER_LITERAL | STRING_LITERAL.
 */
  final public Token url() throws ParseException {
 /*@bgen(jjtree) URL */
        SimpleNode jjtn000 = new SimpleNode(JJTURL);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token oToken;
    try {
      if (jj_2_16(2)) {
        oToken = jj_consume_token(CHARACTER_LITERAL);
      } else if (jj_2_17(2)) {
        oToken = jj_consume_token(STRING_LITERAL);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
                jjtn000.setLexeme(oToken.image);
                {if (true) return oToken;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

/**
 * TYPE ->
 * 	ID
 * 	| "int"
 * 	| "double"
 *  | "bool"
 * 	| "float"
 * 	| "char"
 * 	| "string"
 *  | "void"
 */
  final public Token type() throws ParseException {
 /*@bgen(jjtree) TYPE */
        SimpleNode jjtn000 = new SimpleNode(JJTTYPE);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token oToken;
    try {
      if (jj_2_18(2)) {
        oToken = jj_consume_token(ID);
      } else if (jj_2_19(2)) {
        oToken = jj_consume_token(INT);
      } else if (jj_2_20(2)) {
        oToken = jj_consume_token(BOOLEAN);
      } else if (jj_2_21(2)) {
        oToken = jj_consume_token(DOUBLE);
      } else if (jj_2_22(2)) {
        oToken = jj_consume_token(FLOAT);
      } else if (jj_2_23(2)) {
        oToken = jj_consume_token(CHAR);
      } else if (jj_2_24(2)) {
        oToken = jj_consume_token(STRING);
      } else if (jj_2_25(2)) {
        oToken = jj_consume_token(VOID);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
                jjtn000.setLexeme(oToken.image);
                {if (true) return oToken;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  final private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  final private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  final private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  final private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  final private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  final private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  final private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  final private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  final private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  final private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  final private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  final private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  final private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  final private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  final private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  final private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  final private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  final private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  final private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  final private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  final private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }
